--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -123,7 +123,7 @@
 				  <span id="totalAmount"><strong>₹ <%=totalAmount.toFixed(2)%></strong></span>
 				</li>
 			  </ul>
-			  <form action="/buy-now" method="get">
+			  <form action="/buy-now" method="post">
 			  <%if(totalAmount==0){%>
 				<button type="submit" class="btn btn-success w-100 shadow-0 mb-2" disabled> Make purchase</button> 
 				<%}else{%>
