--- a/views/user/buy-now.ejs
+++ b/views/user/buy-now.ejs
@@ -354,43 +354,50 @@
               </div>
               <div class="col-lg-3">
                 <div class="card shadow-0 border">
-                  <div class="card-body">
-                    <div class="d-flex justify-content-between">
-                      <p class="mb-2">Total price:</p>
-                      <input
-                        type="hidden"
-                        name="totalPrice"
-                        value="<%= totalPrice %>"
-                      />
-                      <p class="mb-2">₹ <b><%=totalPrice.toFixed(2) %> </b></p>
-                    </div>
-                    <hr />
-
-                    <div class="mt-3">
-                      <button
-                        type="submit"
-                        id="completeCheckoutBtn"
-                        class="btn btn-success w-100 shadow-0 mb-2"
-                      >
-                        complete checkout
-                      </button>
-                      <!-- <a href="#" onclick="makePurchase('')" class="btn btn-success w-100 shadow-0 mb-2">complete checkout </a>   -->
-                      <a
-                        href="/product-details"
-                        class="btn btn-light w-100 border mt-2"
-                      >
-                        Back to shop
-                      </a>
-
-                      <input type="hidden" id="walletAdded" value="0" />
-                    </div>
-                  </div>
+                 
                 </div>
               </div>
+              
             </form>
+            
           </div>
         </div>
       </div>
+      
+      <div class="col-lg-3">
+        <div class="card shadow-0 border">
+      <div class="card-body">
+        <div class="d-flex justify-content-between">
+          <p class="mb-2">Total price:</p>
+          <input
+            type="hidden"
+            name="totalPrice"
+            value="<%= totalPrice %>"
+          />
+          <p class="mb-2">₹ <b><%=totalPrice.toFixed(2) %> </b></p>
+        </div>
+        <hr />
+      </div>
+      <div class="mt-3">
+        <button
+          type="submit"
+          id="completeCheckoutBtn"
+          class="btn btn-success w-100 shadow-0 mb-2"
+        >
+          complete checkout
+        </button>
+        <!-- <a href="#" onclick="makePurchase('')" class="btn btn-success w-100 shadow-0 mb-2">complete checkout </a>   -->
+        <a
+          href="/product-details"
+          class="btn btn-light w-100 border mt-2"
+        >
+          Back to shop
+        </a>
+
+        <input type="hidden" id="walletAdded" value="0" />
+      </div>
+    </div>
+  </div>
     
     </div>
   </div>
@@ -454,7 +461,7 @@
               text: "Order Successfull.Waiting for response!",
               icon: "success",
             });
-            window.location.href = "/order-details";
+            window.location.href = "/order-list";
             console.log("success", data);
           });
       } catch (error) {
