order details without quantity

--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -93,7 +93,7 @@
 				class="rounded-circle img-fluid" style="width: 150px;">
 			  <h5 class="my-3"><%= user.name %></h5>
 			  <div class="d-flex justify-content-center mb-2">
-				<button type="button" class="btn btn-primary">Orders</button>
+				<a href="/order-list"><button type="button" class="btn btn-primary">Orders</button></a>
 				<button type="button" class="btn btn-outline-primary ms-1">Wishlist</button>
 			  </div>
 			</div>
