--- a/views/partials/adminaside.ejs
+++ b/views/partials/adminaside.ejs
@@ -34,7 +34,7 @@
           </a>
         
        
-          <a class="menu-link" href="page-sellers-cards.html">
+          <a class="menu-link" href="/admin/orders">
             <i class="icon material-icons md-store"></i>
             <span class="text">Orders</span>
           </a>
