--- a/views/user/order-details.ejs
+++ b/views/user/order-details.ejs
@@ -81,7 +81,7 @@
                                     <h6 class="mb-1">Order info</h6>
                                     <p class="mb-1">
                                         
-                                        Pay method:  <%= totalPrice %>  <br> Status:
+                                        Pay method:  <%= payment %>  <br> Status:
                                         
                                             pending
                                                 
