--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -72,7 +72,7 @@
                                     <td><%= order.payment %></td>
                                     <td class="text-end">
                                                 
-                                        <a href="/admin/orderDetails" class="btn btn-md rounded font-sm ml-5">Detail</a>
+                                        <a href="/admin/orderDetails/<%=order._id %>" class="btn btn-md rounded font-sm ml-5">Detail</a>
                                                                        
                                     </td>
      
