order status without clr done

--- a/views/user/order-details.ejs
+++ b/views/user/order-details.ejs
@@ -81,20 +81,7 @@
                                     <h6 class="mb-1">Order info</h6>
                                     <p class="mb-1">
                                         
-                                        Pay method:  <%= payment %>  <br> Status:
-                                        
-                                            pending
-                                                
-                                                    Delivered
-                                                    
-                                                        Approved
-                                                    
-                                                        Returned
-                                                        
-                                                            Cancelled
-                                                            
-                                                                Shipped
-                                                                
+                                        Pay method:  <%= payment %>  <br> Status:<%= order.status %>
 
                                     </p>
                                     
