stock without alert done

--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -41,7 +41,7 @@
                   />
                 </td>
                 <td><%= product.description %></td>
-                <td>$<%= product.regularPrice %></td>
+                <td>$<%= product.salePrice %></td>
                 <td>
                   <span class="badge rounded-pill alert-success">Active</span>
                 </td>
