--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -37,10 +37,14 @@
 							-
 							</button>
 							<input name="quantity" readonly type="text" id="<%=item.product._id%>" class="form-control text-center" value="<%= item.quantity %>" aria-label="Example text with button addon" aria-describedby="decrementButton" />
-							<button class="left btn btn-white border border-secondary px-3 btn-outline-success" type="button" id="incrementButton" data-mdb-ripple-color="dark" onclick="changeQuantity('<%= item.productId %>', 'increment')">
+							<button class="left btn btn-white border border-secondary px-3 btn-outline-success" type="button" id="incrementButton" data-mdb-ripple-color="dark" onclick="changeQuantity('<%= item.productId %>', 'increment')" <%= item.quantity >= item.product.units ? 'disabled' : '' %>>
 								+
 								</button>
-							
+								<% if (item.quantity >= item.product.stock) { %>
+									<div class="alert alert-warning" role="alert">
+										Out of stock
+									</div>
+								<% } %>
 							</div>
 							<div class="mt-4">
 								<p>Size: 
