--- a/views/user/men.ejs
+++ b/views/user/men.ejs
@@ -94,7 +94,13 @@
 										<span class="old-price">$5000.8</span>
 									</div>
 									<div class="product-action-1 show">
+										<% if(product.units === 0){ %>
+											<p class="text-danger">Out of stock</p>
+											<% } else { %>
+
+										
 										<a aria-label="Add To Cart" class="action-btn hover-up" href="shop-cart.html"><i class="fi-rs-shopping-bag-add"></i></a>
+                                      <% } %>
 									</div>
 								</div>
 							</div>
