--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -138,7 +138,12 @@
                                                 <a href="#" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
                                             </div>
                                             <div class="product-extra-link2">
-                                                <button type="submit"  class="button button-add-to-cart">Add to cart</button>
+                                                <% if (products.units > 0) { %>
+                                                    <button type="submit"  class="button button-add-to-cart">Add to cart</button>
+                                                  <% } else { %>
+                                                    <button class="btn btn-secondary" disabled>Out of Stock</button>
+                                                  <% } %>
+                                                <!-- <button type="submit"  class="button button-add-to-cart">Add to cart</button> -->
                                                 <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
                                                 
                                             </div>
