--- a/views/user/forgotpassword.ejs
+++ b/views/user/forgotpassword.ejs
@@ -82,10 +82,16 @@ a:hover {
 </head>
 <link rel="stylesheet" href="/css/forgotpassword.css">
 <body>
+   
     <div class="container">
+        <% if (typeof message !== 'undefined') { %>
+            <div class="alert alert-danger fade show mt-3" id="message" role="alert">
+              <%= message %>
+            </div>
+            <% } %>
         <h2>Forgot Password</h2>
         <p>Enter your email address to reset your password.</p>
-        <form action="/forgotpassword" method="post">
+        <form action="/forget" method="post">
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
             <button type="submit">Reset Password</button>
