--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -58,7 +58,7 @@
                                     
                                                 
                                             
-                                    <td></td>
+                                    <td><%= order.status %></td>
                                     <td><%= formatDate(order.createdOn) %></td>
                                     <td><%= order.payment %></td>
                                     <td class="text-end">
