user side middleware done

--- a/views/user/buy-now.ejs
+++ b/views/user/buy-now.ejs
@@ -271,7 +271,7 @@
             >
               Select Address
             </h1>
-            <a href="/add-address" class="btn btn-info" style="margin-left: 85%"
+            <a href="/checkout-address" class="btn btn-info" style="margin-left: 85%"
               >Add Address</a
             >
 
