--- a/views/user/checkoutAddress.ejs
+++ b/views/user/checkoutAddress.ejs
@@ -23,7 +23,7 @@
                     <h5 class="mb-0">Add new Address</h5>
                 </div>
                 <div class="card-body">
-                    <form method="post" action="/checkout-address">
+                    <form method="post" action="/checkout-submitAdd">
                        <div class="form-outline mb-4">
                         <input type="text" class="forms-control name" id="name" name="name" placeholder="Full Name" />
                       </div>
