--- a/views/user/order-list.ejs
+++ b/views/user/order-list.ejs
@@ -81,7 +81,7 @@ thead {
                                 
                                 <td>
                                     <a href="/order-details/<%=order._id %>"><button class="btn btn-success" style="font-size: 10px; padding: 5px 10px;">Details</button></a>
-                                    <button  class="btn btn-outline-danger" style="font-size: 10px; padding: 5px 10px;">Cancel</button>
+                                    <!-- <button  class="btn btn-outline-danger" style="font-size: 10px; padding: 5px 10px;">Cancel</button> -->
                                 </td>
                                 
                                 <td><i class="fa fa-ellipsis-h text-black-50"></i></td>
