--- a/views/user/buy-now.ejs
+++ b/views/user/buy-now.ejs
@@ -440,7 +440,7 @@
         'input[name="selectedAddress"]:checked'
       );
       if (!billingAddress) {
-        alert("please select an address");
+        alert("please select an address or add product in cart");
         return;
       }
       const selectedAdd = billingAddress.value;
