--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/adminheader') %>
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10" />
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <body>
   <div class="screen-overlay"></div>
   <%- include('../partials/adminaside') %>
@@ -54,10 +55,15 @@
                     <i class="material-icons md-edit"></i> Edit
                   </a>
                   <a
-                    href="/admin/deleteProduct/<%= product._id %>"
+                    onclick="confirmDelete('<%= product._id %>')"
+                    href="#"
                     class="btn btn-sm font-sm btn-light rounded"
                   >
-                    <i class="material-icons md-delete_forever"></i> Delete
+                    <i
+                      class="material-icons md-delete_forever"
+                      id="deleteProduct"
+                    ></i>
+                    Delete
                   </a>
                 </td>
               </tr>
@@ -91,3 +97,43 @@
     <%- include('../partials/adminfooter') %>
   </main>
 </body>
+
+<script>
+  function confirmDelete(productId) {
+    Swal.fire({
+      title: "Are you sure?",
+      text: "You won't be able to revert this!",
+      icon: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#3085d6",
+      cancelButtonColor: "#d33",
+      confirmButtonText: "Yes, delete it!",
+    }).then(async (result) => {
+      if (result.isConfirmed) {
+        try {
+          const response = await fetch(`deleteProduct/${productId}`, {
+            method: "get",
+          });
+          alert(response.status)
+            console.log(productId);
+          if (response.status==200) {
+           
+            const responseData = await response.json();
+            
+            window.location.href = responseData.redirectTo;
+          } else {
+            console.error("Failed to delete",response.statusText);
+            Swal.fire(
+              "Error",
+              "An error occurred while deleting the product.",
+              "error"
+            );
+          }
+        } catch (error) {
+          console.error("An error occurred:", error);
+          Swal.fire("Error", "An unexpected error occurred.", "error");
+        }
+      }
+    });
+  }
+</script>
