--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Rokkitt:100,300,400,700" rel="stylesheet">
 	<link rel="stylesheet" href="frontendassets/css/main.css">
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10" />
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
