--- a/views/user/order-list.ejs
+++ b/views/user/order-list.ejs
@@ -1,100 +1,160 @@
-<%-include('../partials/header') %>
-<%-include('../partials/nav') %>
+<%-include('../partials/header') %> <%-include('../partials/nav') %>
 
 <style>
-    @import url('https://fonts.googleapis.com/css?family=Assistant');
-body {
-  background: #eee;
-  font-family: Assistant, sans-serif;
-}
+  @import url("https://fonts.googleapis.com/css?family=Assistant");
+  body {
+    background: #eee;
+    font-family: Assistant, sans-serif;
+  }
 
-.cell-1 {
-  border-collapse: separate;
-  border-spacing: 0 4em;
-  background: #fff;
-  border-bottom: 5px solid transparent;
-  /*background-color: gold;*/
-  background-clip: padding-box;
-}
+  .cell-1 {
+    border-collapse: separate;
+    border-spacing: 0 4em;
+    background: #fff;
+    border-bottom: 5px solid transparent;
+    /*background-color: gold;*/
+    background-clip: padding-box;
+  }
 
-thead {
-  background: #dddcdc;
-}
+  thead {
+    background: #dddcdc;
+  }
 
-.toggle-btn {
-  width: 40px;
-  height: 21px;
-  background: grey;
-  border-radius: 50px;
-  padding: 3px;
-  cursor: pointer;
-  -webkit-transition: all 0.3s 0.1s ease-in-out;
-  -moz-transition: all 0.3s 0.1s ease-in-out;
-  -o-transition: all 0.3s 0.1s ease-in-out;
-  transition: all 0.3s 0.1s ease-in-out;
-}
+  .toggle-btn {
+    width: 40px;
+    height: 21px;
+    background: grey;
+    border-radius: 50px;
+    padding: 3px;
+    cursor: pointer;
+    -webkit-transition: all 0.3s 0.1s ease-in-out;
+    -moz-transition: all 0.3s 0.1s ease-in-out;
+    -o-transition: all 0.3s 0.1s ease-in-out;
+    transition: all 0.3s 0.1s ease-in-out;
+  }
 
-.toggle-btn > .inner-circle {
-  width: 15px;
-  height: 15px;
-  background: #fff;
-  border-radius: 50%;
-  -webkit-transition: all 0.3s 0.1s ease-in-out;
-  -moz-transition: all 0.3s 0.1s ease-in-out;
-  -o-transition: all 0.3s 0.1s ease-in-out;
-  transition: all 0.3s 0.1s ease-in-out;
-}
+  .toggle-btn > .inner-circle {
+    width: 15px;
+    height: 15px;
+    background: #fff;
+    border-radius: 50%;
+    -webkit-transition: all 0.3s 0.1s ease-in-out;
+    -moz-transition: all 0.3s 0.1s ease-in-out;
+    -o-transition: all 0.3s 0.1s ease-in-out;
+    transition: all 0.3s 0.1s ease-in-out;
+  }
 
-.toggle-btn.active {
-  background: blue !important;
-}
+  .toggle-btn.active {
+    background: blue !important;
+  }
 
-.toggle-btn.active > .inner-circle {
-  margin-left: 19px;
-}
+  .toggle-btn.active > .inner-circle {
+    margin-left: 19px;
+  }
 </style>
 <div class="container mt-5">
-    <div class="d-flex justify-content-center row">
-        <div class="col-md-12">
-            <div class="rounded">
-                <div class="table-responsive table-borderless">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Order Id</th>
-                                <th>Total</th>
-                                <th>Date</th>
-                                <th>status</th>
-                                <th>Action</th>
-                                
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody class="table-body">
-                          <% orders.forEach(order=>{  %>
-                            <tr class="cell-1">
-                                <td><%= order._id %></td>
-                                <td><%= order.totalPrice.toFixed(2) %></td>
-                                
-                                <td><%= formatDate(order.createdOn) %></td>
-                                <td><span><%= order.status %></span></td>
-                                
-                                <td>
-                                    <a href="/order-details/<%=order._id %>"><button class="btn btn-success" style="font-size: 10px; padding: 5px 10px;">Details</button></a>
-                                    <!-- <button  class="btn btn-outline-danger" style="font-size: 10px; padding: 5px 10px;">Cancel</button> -->
-                                </td>
-                                
-                                <td><i class="fa fa-ellipsis-h text-black-50"></i></td>
-                            </tr>
-                            <% });  %>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+  <div class="d-flex justify-content-center row">
+    <div class="col-md-12">
+      <div class="rounded">
+        <div class="table-responsive table-borderless">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Order Id</th>
+                <th>Total</th>
+                <th>Date</th>
+                <th>status</th>
+                <th>Action</th>
 
+                <th></th>
+              </tr>
+            </thead>
+            <tbody class="table-body">
+              <% orders.forEach(order=>{ %>
+              <tr class="cell-1">
+                <td><%= order._id %></td>
+                <td><%= order.totalPrice.toFixed(2) %></td>
+
+                <td><%= formatDate(order.createdOn) %></td>
+                <td><span><%= order.status %></span></td>
+
+                <td>
+                  <a href="/order-details/<%=order._id %>"
+                    ><button
+                      class="btn btn-success"
+                      style="font-size: 10px; padding: 5px 10px"
+                    >
+                      Details
+                    </button></a
+                  >
+
+                  <a
+                    href="#"
+                    class="btn btn-outline-danger"
+                    onclick="confirmCancel('<%=order._id%>')"
+                    style="font-size: 10px; padding: 5px 10px"
+                    >Cancel</a
+                  >
+                </td>
+
+                <td><i class="fa fa-ellipsis-h text-black-50"></i></td>
+              </tr>
+              <% }); %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <%-include('../partials/footer') %>
 
+<script>
+   
+   async function confirmCancel(id) {
+    Swal.fire({
+      title: "Submit your reason for cancellation",
+      input: "text",
+      inputAttributes: {
+        autocapitalize: "off",
+      },
+      showCancelButton: true,
+      confirmButtonText: "Submit",
+      showLoaderOnConfirm: true,
+      preConfirm: async (reason) => {
+        try {
+          const response = await fetch(`/order-cancel`, {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ orderId: id, reason: reason }),
+          });
+
+          if (!response.ok) {
+            throw new Error(`Request failed: ${response.status}`);
+          }
+
+          const responseData = await response.json();
+          return responseData;
+        } catch (error) {
+          Swal.showValidationMessage(`
+              Request failed: ${error}
+            `);
+        }
+      },
+      allowOutsideClick: () => !Swal.isLoading(),
+    }).then((result) => {
+      if (result.isConfirmed) {
+        Swal.fire({
+          title: "Request Submitted",
+          text: "Your cancellation request has been submitted.",
+          icon: "success",
+        }).then(()=>{
+          location.href='/order-list'
+        })
+      }
+    });
+  }
+</script>
